samples/_failures_safe/1761488730_e586c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5dcf968.c: In function ‘main’:
./samples/SAFE/__tmp_d5dcf968.c:170:5: error: expected expression at end of input
  170 |     if (len >
      |     ^~
./samples/SAFE/__tmp_d5dcf968.c:170:5: error: expected declaration or statement at end of input
